# arrow-db

./: .gitignore  Cargo.toml  Makefile  README.md  users.parquet
.github/: DEPLOY.md
.github/workflows/: build-and-deploy.yml
arrow-core/: Cargo.toml
arrow-core/src/: import.rs
arrow-db/: Cargo.toml
arrow-db-browser/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
arrow-db-browser/src/assets/: base.css
arrow-db-browser/src/components/: AlertModal.tsx  App.tsx  ConfirmationModal.tsx  DataView.tsx  FileUpload.tsx  PaginatedDataGrid.tsx  SqlEditor.tsx  SqlView.tsx  StructureView.tsx  TableExplorer.tsx
arrow-db-client/: Cargo.toml  README.md
arrow-db-client/examples/: basic.rs
arrow-db-client/src/: error.rs  lib.rs  main.rs
arrow-db-core/: Cargo.toml  README.md
arrow-db-core/src/: column.rs  database.rs  error.rs  export.rs  file.rs  import.rs  lib.rs  pagination.rs  row.rs  sql.rs  table.rs  test_utils.rs
arrow-db-core/src/sql/: context.rs  delete.rs  insert.rs  mod.rs  query.rs  update.rs  utils.rs
arrow-db-server/: Cargo.toml  README.md
arrow-db-server/src/: main.rs
arrow-db-wasm/: Cargo.toml  LICENSE_MIT
arrow-db-wasm/src/: lib.rs  utils.rs
arrow-db/src/: main.rs
src/: column.rs  database.rs  error.rs  export.rs  import.rs  lib.rs  sql.rs  table.rs
