[package]
name = "arrow-db-core"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "53.2.0", features = ["prettyprint"] }
arrow-schema = "53.2.0"
dashmap = "6.1.0"
datafusion = "42.1.0"
futures = "0.3.31"
parquet = { version = "53.2.0", features = ["async"] }
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["fs", "io-util"] }

