[package]
name = "arrow-db-wasm"
version = "0.1.0"
authors = ["David DiMaria <info@collectivesessions.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
arrow-db-core = { path = "../arrow-db-core", features = ["wasm"] }
bytes = "1.8.0"
chrono = { version = "0.4", features = ["wasmbind"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.40"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
arrow = { version = "53.2.0", default-features = false }
serde = { version = "1.0.214", default-features = false, features = ["derive"] }


[dev-dependencies]
wasm-bindgen-test = "0.3.34"
